--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Veebilehe struktuur</title>
+    <meta name="descrtiption" content="Õpime veebitehnoloogiat" />
+    <meta name="keywords" content="HTML,CSS,HTML5,CSS3" />
+    <meta name="author" content="Roven Piho" />
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>piho.com</h1>
+        <p>Õpime veebitehnoloogiat</p>
+      </header>
+      <nav>Avaleht | Teenused | Kontakt
+      </nav>
+      <section>
+        <h2>Exercitation ullamco</h2>
+        <article>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+        </article>
+        <article>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem</p>
+        </article>
+        <article>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum</p>
+        </article>
+        <section>
+</section>
+            ...
+    </main>
+  </body>
 </html>
