--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <meta name="descrtiption" content="Õpime veebitehnoloogiat" />
     <meta name="keywords" content="HTML,CSS,HTML5,CSS3" />
     <meta name="author" content="Roven Piho" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
   </head>
+  </body>
+  <header>
+    <nav> id="navbar"
+        <div>
+            <h1><a href="index.html">VOCO</a></h1>
+            <ul>
+                <li><a href="index.html">Avaleht</a></li>
+                <li><a href="about.html">Kirjeldus</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+            </ul>
+        </div>
+    </nav>
+  </header>
   <body>
     <main>
       <header>
@@ -32,7 +47,12 @@
         </article>
         <section>
 </section>
-            ...
-    </main>
-  </body>
+<aside>
+    <p>Siia banner</p>
+</aside>
+<footer>
+    <p>piho.com | Uus 6,Põlva | +372 58141403</p>
+          </footer>
+       </main>
+</body>
 </html>
