--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   </body>
   <header>
-    <nav> id="navbar"
+    <nav id="navbar">
         <div>
             <h1><a href="index.html">VOCO</a></h1>
             <ul>
