--- a/index.html
+++ b/index.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Veebilehe struktuur</title>
-    <meta name="descrtiption" content="Õpime veebitehnoloogiat" />
-    <meta name="keywords" content="HTML,CSS,HTML5,CSS3" />
-    <meta name="author" content="Roven Piho" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
+    <title>Hotell – Avaleht</title>
   </head>
-  </body>
-  <header>
-    <nav id="navbar">
-        <div>
-            <h1><a href="index.html">VOCO</a></h1>
-            <ul>
-                <li><a href="index.html">Avaleht</a></li>
-                <li><a href="about.html">Kirjeldus</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </div>
-    </nav>
-  </header>
   <body>
-    <main>
-      <header>
-        <h1>piho.com</h1>
-        <p>Õpime veebitehnoloogiat</p>
-      </header>
-      <nav>Avaleht | Teenused | Kontakt
+    <header>
+      <!--navigatsioon-->
+      <nav id="navbar">
+        <div class="container">
+          <h1><a href="index.html">KHT</a></h1>
+          <ul>
+            <li><a class="current" href="index.html">Avaleht</a></li>
+            <li><a href="about.html">Kirjeldus</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+          </ul>
+        </div>
       </nav>
-      <section>
-        <h2>Exercitation ullamco</h2>
-        <article>
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-        </article>
-        <article>
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem</p>
-        </article>
-        <article>
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum</p>
-        </article>
-        <section>
-</section>
-<aside>
-    <p>Siia banner</p>
-</aside>
-<footer>
-    <p>piho.com | Uus 6,Põlva | +372 58141403</p>
-          </footer>
-       </main>
-</body>
+    </header>
+    <!--vitriin-->
+    <div id="showcase">
+      <div class="container">
+        <div class="showcase-content">
+          <h1><span class="text-primary"> Tere tulemast</span> KHT Hotelli!</h1>
+          <p>Parim koht mugavuste leidmiseks!</p>
+          <a class="btn" href="about.html">Rohkem meist</a>
+        </div>
+      </div>
+    </div>
+    <!--info-->
+    <section id="info" class="bg-dark">
+      <div class="info-img"></div>
+      <div class="info-content">
+        <h2><span class="text-primary">Ajalugu</span></h2>
+        <p>lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, cumque. Alias odio accusamus voluptatem quidem corrupti repellat quaerat nostrum sequi!</p>
+        <a class="btn btn-light" href="about.html">Loe rohkem</a>
+      </div>
+    </section>
+    <!--võimalused-->
+    <section id="features">
+      <div class="box bg-light">
+        <h3>Asukoht</h3>
+        <p>Kopli tn 1c-50115, 50115 Tartu</p>
+      </div>
+      <div class="box bg-dark">
+        <h3>Söök</h3>
+        <p>Igale maitsele midagi!</p>
+      </div>
+      <div class="box bg-light">
+        <h3>Sport</h3>
+        <p>Sportimiseks väga head tingimused!</p>
+      </div>
+    </section>
+    <div class="clear"></div>
+    <footer>
+      <p>KHT &copy;2025, Kõik Õigused On kaitstud</p>
+    </footer>
+  </body>
 </html>
